fix(schema-doc): melhorias

--- a/packages/schema-doc/locales/en.json
+++ b/packages/schema-doc/locales/en.json
@@ -9,5 +9,11 @@
 	"Name": "Name",
 	"Type": "Type",
 	"Description": "Description",
-	"Required": "Required"
+	"Required": "Required",
+	"Back to top": "Back to top",
+	"type $ref(%s)": "type $ref(%s)",
+	"Definitions": "Definitions",
+	"No": "No",
+	"Yes": "Yes",
+	"Mapping": "Mapping"
 }
