--- a/packages/schema-doc/locales/pt-BR.json
+++ b/packages/schema-doc/locales/pt-BR.json
@@ -2,5 +2,11 @@
 	"Name": "Name",
 	"Type": "Type",
 	"Description": "Description",
-	"Required": "Required"
+	"Required": "Required",
+	"No": "No",
+	"Yes": "Yes",
+	"Examples": "Examples",
+	"type": "type",
+	"with `anyOf` properties": "with `anyOf` properties",
+	"Properties": "Properties"
 }
