fix(schema-doc): schema datatypes

--- a/packages/schema-doc/locales/pt-BR.json
+++ b/packages/schema-doc/locales/pt-BR.json
@@ -8,5 +8,6 @@
 	"Examples": "Examples",
 	"type": "type",
 	"with `anyOf` properties": "with `anyOf` properties",
-	"Properties": "Properties"
+	"Properties": "Properties",
+	"Definitions": "Definitions"
 }
